# cobs-simd

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: encode_decode.rs
src/: aligned_iter.rs  block_iter.rs  lib.rs  next_zero_simd_128.rs  next_zero_std_simd.rs
