[package]
name = "cobs-simd"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8"
rand_pcg = "0.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
concat-idents = "*"
corncobs = "0.1.3"

[[bench]]
name = "encode_decode"
harness = false

[profile.bench]
debug = true
