[package]
name = "cobs-simd"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ottojo/cobs-simd"
description = "COBS encoding library using SIMD instructions"
license = "MIT OR JSON"
readme = "README.md"
keywords = ["cobs", "framing"]
categories = ["encoding"]

[lib]
bench = false

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8"
rand_pcg = "0.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
concat-idents = "*"
corncobs = "0.1.3"

[[bench]]
name = "encode_decode"
harness = false

[profile.bench]
debug = true
